# FastThinkNet

./: .gitignore  INTEGRATION.md  NEURAL_NETWORK_ARCHITECTURE_PLAN.md  NEURAL_NETWORK_DESIGN.md  README.md  __init__.py  config.py  model_enhancement_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  statistical_methods_research.md  trained_model.h5  workflow-logs.txt  workflow_issues.txt
.github/workflows/: python-app.yml
FastThinkNet/: __init__.py
FastThinkNet/models/: __init__.py  pytorch_model.py
FastThinkNet/models/meta_learning/: base_model.py
FastThinkNet/tests/: __init__.py  test_integration.py
models/: __init__.py  advanced_model.py  neural_network_agent.py  pytorch_model.py
models/deep_learning/: base_model.py
models/meta_learning/: base_model.py
models/neural_agent/: agent_model.py  neural_network_agent.py  train_eval.py
models/neural_learning_agent/: demo.py  main.py  neural_network_agent.py  visualization.py
models/neural_learning_agent/environments/: custom_env.py
models/reinforcement_learning/: base_model.py
models/self_play/: base_model.py
scripts/: tf_data_pipeline.py  train_neural_agent.py
scripts/neural_learning_agent/: main.py
tests/: test_integration.py
unpacked/EGG-INFO/: PKG-INFO  SOURCES.txt  requires.txt
unpacked/models/: neural_network_agent.py
unpacked/models/deep_learning/: base_model.py
unpacked/models/meta_learning/: base_model.py
unpacked/models/reinforcement_learning/: base_model.py
unpacked/scripts/: train_neural_agent.py
