[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.mypy.overrides]
module = [
  "gym",
  "setuptools",
  "tensorflow",
  "fastthinknet.utils",
  "fastthinknet.models",
  "fastthinknet.config"
]
ignore_missing_imports = true
